Fix memory limit exceeded issue in EvaluateUtil